// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Actions Action And Method 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  Click me to log the action!
</button>
`;

exports[`Storyshots Addon|Actions Action Only 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  Click me to log the action!
</button>
`;

exports[`Storyshots Addon|Actions Multiple Actions 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  (Double) click me to log the action!
</button>
`;

exports[`Storyshots Addon|Actions Multiple Actions Object 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  (Double) click me to log the action!
</button>
`;
